--- a/aylin.css
+++ b/aylin.css
@@ -57,7 +57,7 @@
 
 /* Sweet sunset dots */
 .monaco-workbench .activitybar>.content .monaco-action-bar .badge .badge-content {
-    background: linear-gradient(to bottom, #00ffd0, #ffa7c4);
+    background: linear-gradient(to bottom, #00ffd0, #FD98B9);
 }
 
 /* Disable active tab background */
@@ -83,7 +83,7 @@
     left: 0;
     right: 0;
     height: 4px;
-    background: linear-gradient(to right, #ffa7c4, #00ffd0) !important;
+    background: linear-gradient(to right, #FD98B9, #00ffd0) !important;
     opacity: 1;
     z-index: 6;
 }
@@ -115,7 +115,7 @@
     left: 0px;
     width: 4px;
     height: 100%;
-    background: linear-gradient(to bottom, #ffa7c4, #00ffd0) !important;
+    background: linear-gradient(to bottom, #FD98B9, #00ffd0) !important;
     opacity: 1;
 }
 
